# NSU-Parallel-tasks

./: README.md
task1/: CMakeLists.txt  Makefile  README.md  main.cpp
